# imraylib

./: .envrc  LICENSE  README.md  setup.cfg  shell.nix
example/: demo.py  testwindow.py
imraylib/: raylib_consts.py  renderer.py
nix/raylib/: default.nix
