[metadata]
name = imraylib
version = attr: imraylib.__version__
description = Integrates Imgui with Raylib
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = BSD 3-Clause License

author = Adam Griffiths
author_email = adam.lw.griffiths@gmail.com
url = https://github.com/adamlwgriffiths/imraylib/
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Multimedia :: Graphics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = imraylib
python_requires = >=3.4
install_requires =
    raylib-py-flat
    PyOpenGL
    PyOpenGL_accelerate
    imgui
    # commented out until raylibpy 3.7 is mainlined
    #raylib-py
